fix z-index stories

--- a/client/src/pages/OneTrendPage/OneTrendPage.scss
+++ b/client/src/pages/OneTrendPage/OneTrendPage.scss
@@ -74,7 +74,6 @@
 
     &-Stories {
         position: relative;
-        z-index: 100;
 
         @media(min-width: $screen-m) {
             display: none;
